AndroidPanama: partially fix SymbolLookup.loaderLookup